--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+    font-family: 'Lucida Grande', sans-serif;
+    color: white;
+    background: black;
+}
+
 h1{
     font-size: 64px;
     text-align: center;
@@ -12,3 +18,4 @@ p{
     font-size: 24px;
     padding-top: 20px;
 }
+
