--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+    font-family: 'Lucida Grande', sans-serif;
+    color: white;
+    background: black;
+}
 
 h1{
     font-size: 64px;
@@ -13,4 +18,43 @@ p{
     font-size: 24px;
     padding-top: 20px;
 }
+
+img{
+    display: block;
+    margin: auto;
+    width: 525px;
+}
+
+div{
+    min-height: 150px;
+    padding: 25px;
+}
+#red, #red h2, #red p{
+    background: red;
+    text-align: right;
+}
+
+#blue, #blue h2, #blue p{
+    background: blue;
+    text-align: left;
+}
+#yellow, #yellow h2, #yellow p{
+    background: yellow;
+    text-align: right;
+    color: black;
+    text-shadow: 5px 5px 2px #c7e2c7;
+}
+
+#green, #green h2, #green p{
+    background: green;
+    text-align: left;
+}
+
+footer{
+    text-align: right;
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
+
+
 
