--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,68 @@
-* {
-    font-family: 'Lucida Grande', sans-serif;
-    color: white;
-    background: black;
+/*STARTER CODE*/
+
+/*
+We have started some of the selectors for you.
+For others we have provided hints on what the selectors should be.
+There are some missing selectors.
+
+Make sure to learn what the starter code does!!
+*/
+
+body{
+  color: black;
+  font-family: sans-serif;
+  font-size: 16px;
+  margin: 1.2em;
+  background-size: cover ;
+  background-position: center;
+}
+
+main{
+  margin-bottom: 100px;
 }
 
 h1{
-    font-size: 64px;
-    text-align: center;
+  color: #8000FF;
+  font-size: 2em;
+  line-height: 1.5;
+  text-align: center;
 }
 
-h2{
-    font-size: 30px;
-    text-shadow: 5px 5px 2px #808080;
+caption{
+  margin:5px 0px;
 }
 
-p{
-    font-size: 24px;
-    padding-top: 20px;
+p{}
+
+a{}
+
+table{
+    border: 2px solid black;
 }
 
-img{
-    display: block;
-    margin: auto;
-    width: 525px;
+.colhead{
+  background-color: #7e0820;
+  color: white;
 }
 
-div{
-    min-height: 150px;
-    padding: 25px;
-}
-#red, #red h2, #red p{
-    background: red;
-    text-align: right;
+.rowhead{}
+
+td{
+  padding: 15px;
 }
 
-#blue, #blue h2, #blue p{
-    background: blue;
-    text-align: left;
-}
-#yellow, #yellow h2, #yellow p{
-    background: yellow;
-    text-align: right;
-    color: black;
-    text-shadow: 5px 5px 2px #c7e2c7;
-}
+tr{}
 
-#green, #green h2, #green p{
-    background: green;
-    text-align: left;
-}
+*{}
+
+thead tr:first-child th:first-child{}
 
 footer{
-    text-align: right;
-    padding-bottom: 10px;
-    padding-right: 10px;
+  position:fixed;
+  left:0px;
+  bottom:0px;
+  width:100%;
+  background:black;
+  text-align:center;
+  color: white;
 }
-
-
-
