--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,8 @@ table{
     padding: 15px;
     border-radius: 15px;
     border: 2px black;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -99,7 +101,8 @@ tr:hover {
   border: black;
 }
 
-thead tr:first-child th:first-child{}
+thead tr:first-child th:first-child{
+}
 
 footer{
   position:fixed;
