--- a/css/style.css
+++ b/css/style.css
@@ -53,17 +53,13 @@ table{
     border-top: 2px solid black;
     text-align: center;
     padding: 15px;
-    border-radius: 15px;
-    border: 2px black;
+    border-radius: 15px !important;
     margin-left: auto;
     margin-right: auto;
 }
 
 
-.rowhead{
-  border: 2px;
-  border-color: black;
-}
+
 
 .colhead{
   background-color: #7e0820;
@@ -72,6 +68,11 @@ table{
   padding: 10px;
   text-align: center;
   text-transform: uppercase;
+}
+
+.rowhead{
+  border: 2px;
+  border-color: black;
 }
 
 
