--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,18 @@ a{
   text-decoration-style: wavy;
 }
 
+thead {
+  border-radius: 15px;
+}
 
+tbody {
+  border-radius: 15px;
+
+}
 table{
     border-top: 2px solid black;
     text-align: center;
     padding: 15px;
-    border-radius: 15px !important;
     margin-left: auto;
     margin-right: auto;
 }
@@ -78,10 +84,8 @@ table{
 
 td{
   padding: 15px;
-  
+  border-top: 2px black;
 }
-
-
 
 tr:nth-child(odd){
   background-color:#D1D1D1;
@@ -112,5 +116,5 @@ footer{
   width:100%;
   background:black;
   text-align:center;
-  color: white;
+  min-height: 60px;
 }
