--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ p{
 
 a{
   font-size: 16px;
-  color:  #B92751;
+  color:  #B21F50;
   text-decoration: underline;
   text-decoration-style: wavy;
 }
